[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "python-rpm-spec"
module = "pyrpm"
author = "Ben Kircher"
author-email = "bkircher@0xadd.de"
home-page = "https://github.com/bkircher/python-rpm-spec"
requires-python = ">=3.8"
description-file = "README.md"
